# todo-c

./: .gitignore  CMakeLists.txt  README.md
.zed/: debug.json  tasks.json
include/: adapter.h  command.h  storage.h  todo.h
include/lib/: hashmap.h  vector.h
src/: adapter.c  command.c  main.c  storage.c  todo.c
src/lib/: hashmap.c  vector.c
